# AndroidOpenSSL

./: README.md  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
openssl/: build.gradle
openssl/src/androidTest/java/me/sam/openssl/: ExampleInstrumentedTest.java
openssl/src/main/: AndroidManifest.xml
openssl/src/main/cpp/: CMakeLists.txt  encrypt.cpp  encrypt.h  native-lib.cpp
openssl/src/main/java/me/sam/openssl/: NativeSdk.java  Openssl.java
openssl/src/test/java/me/sam/openssl/: ExampleUnitTest.java
sample/: build.gradle
sample/src/androidTest/java/me/sam/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/me/sam/sample/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/test/java/me/sam/sample/: ExampleUnitTest.java
